--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==1.4.0
 adblockparser==0.7
 AdvancedHTTPServer==2.2.0
 aesedb==0.1.3
@@ -26,6 +27,7 @@ asciitree==0.3.3
 asgiref==3.7.2
 asn1crypto==1.5.1
 asttokens==2.2.1
+astunparse==1.6.3
 asyauth==0.0.9
 async-timeout==4.0.2
 asysocks==0.2.2
@@ -50,6 +52,7 @@ bottle==0.12.23
 Bottleneck==1.3.5
 Brlapi==0.8.5
 Brotli==1.0.9
+cachetools==5.3.1
 cairocffi==1.6.0
 catfish==4.16.4
 cbor==1.0.0
@@ -68,13 +71,16 @@ click-plugins==1.1.1
 cmdtest==0.32+git
 colorama==0.4.6
 commonmark==0.9.1
+comtypes==1.2.0
 configobj==5.0.8
 constantly==15.1.0
 contourpy==1.0.7
 crackmapexec==5.2.2
 cryptography==38.0.4
+customtkinter==5.2.0
 cycler==0.11.0
 Cython==0.29.36
+darkdetect==0.8.0
 dataclasses-json==0.5.13
 dbus-python==1.3.2
 debtags==2.1
@@ -84,17 +90,28 @@ deprecation==2.0.7
 dicttoxml==1.7.15
 distlib==0.3.7
 distro==1.8.0
-Django==4.2.5
-django-graphql-jwt==0.4.0
+Django==3.2.20
+django-cors-headers==4.2.0
+django-debug-toolbar==4.2.0
+django-filter==23.3
+django-graphql-auth==0.3.16
+django-graphql-jwt==0.3.0
+django-templated-mail==1.1.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
+djoser==2.2.0
 dnslib==0.9.23
 dnspython==2.4.1
 docopt==0.6.2
 donut-shellcode==0.9.3
 dropbox==11.36.2
 dsinternals==1.2.4
+EasyProcess==1.1
 ecdsa==0.18.0
 email-validator==1.3.0
+entrypoint2==1.1
 et-xmlfile==1.0.1
+evdev==1.6.1
 exceptiongroup==1.1.2
 executing==1.2.0
 ExifRead==3.0.0
@@ -111,6 +128,7 @@ filteralchemy==0.1.0
 flasgger==0.9.5
 Flask==2.2.2
 Flask-Classful==0.15.0.dev1
+Flask-Cors==4.0.0
 Flask-KVSession-fork==0.6.4
 Flask-Limiter==1.0.1
 Flask-Login==0.6.2
@@ -132,16 +150,21 @@ geoip2==2.9.0
 geojson==3.0.1
 gitdb==4.0.9
 GitPython==3.1.30
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
 gpg==1.18.0
-graphene==3.3
-graphene-django==3.1.5
+graphene==2.1.9
+graphene-django==2.16.0
 graphene-sqlalchemy==2.1.2
-graphql-core==3.2.3
-graphql-relay==3.2.0
+graphql-core==2.2.1
+graphql-relay==2.0.1
 greenlet==2.0.2
+grpcio==1.57.0
 gyp==0.1
 h11==0.14.0
 h2==4.1.0
+h5py==3.9.0
 hashID==3.1.4
 hiredis==1.0.1
 hpack==4.0.0
@@ -174,11 +197,14 @@ jaraco.functools==3.7.0
 jaraco.text==3.11.1
 jdcal==1.0
 jedi==0.18.2
+jeepney==0.8.0
 Jinja2==3.1.2
+joblib==1.3.2
 jq==1.2.1
 jsonschema==3.2.0
 kaitaistruct==0.10
 kali-tweaks==2023.3.2
+keras==2.13.1
 KismetCaptureBtGeiger==2021.7.1
 KismetCaptureFreaklabsZigbee==2018.7.0
 KismetCaptureRtl433==2020.10.1
@@ -187,6 +213,7 @@ KismetCaptureRtlamr==2020.10.1
 kiwisolver==0.0.0
 ldap3==2.9.1
 ldapdomaindump==0.9.3
+libclang==16.0.6
 libevdev==0.5
 lightdm-gtk-greeter-settings==1.2.2
 limiter==0.1.2
@@ -214,9 +241,11 @@ mistune0==0.8.4
 mitmproxy==9.0.1
 mnemonic==0.19
 more-itertools==10.1.0
+MouseInfo==0.1.3
 mpmath==0.0.0
 msgpack==1.0.3
 msldap==0.4.7
+mss==9.0.1
 multidict==6.0.4
 mypy-extensions==1.0.0
 mysqlclient==1.4.6
@@ -227,14 +256,18 @@ neotime==1.7.4
 netaddr==0.8.0
 netifaces==0.11.0
 networkx==2.8.8
+nltk==3.8.1
 nplusone==1.0.0
 ntlm-auth==1.4.0
 numexpr==2.8.4
 numpy==1.24.2
+oauthlib==3.2.2
 odfpy==1.4.2
 olefile==0.46
 onboard==1.4.1
+opencv-contrib-python==4.8.0.76
 openpyxl==3.0.9
+opt-einsum==3.3.0
 oscrypto==1.3.0
 outcome==1.2.0
 packaging==23.1
@@ -270,6 +303,7 @@ protobuf==4.21.12
 psutil==5.9.4
 psycopg==3.1.7
 psycopg2==2.9.6
+psycopg2-binary==2.9.7
 ptyprocess==0.7.0
 publicsuffix2==2.20191221
 publicsuffixlist==0.9.3
@@ -278,8 +312,10 @@ py==1.11.0
 py-ubjson==0.16.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+PyAutoGUI==0.9.54
 pycairo==1.24.0
 pycares==4.3.0
+pycaw==20230407
 pycparser==2.21
 pycryptodomex==3.11.0
 pycurl==7.45.2
@@ -289,6 +325,7 @@ pydot==1.4.2
 pyee==9.0.4
 pyExploitDb==0.2.6
 pyfiglet==0.8.post0
+PyGetWindow==0.0.9
 pygexf==0.2.2
 Pygments==2.15.1
 PyGObject==3.44.1
@@ -296,12 +333,14 @@ pygraphviz==1.7
 PyHamcrest==2.0.3
 pyinotify==0.9.6
 PyInstaller==3.5+498e6ee058
-PyJWT==2.8.0
+PyJWT==1.7.1
 pylnk3==0.4.2
 pyminifier==2.1
+PyMsgBox==1.0.9
 pymssql==2.2.2
 PyMySQL==1.0.2
 PyNaCl==1.5.0
+pynput==1.7.6
 pyOpenSSL==23.0.0
 pyotp==2.6.0
 pyparsing==3.1.0
@@ -317,7 +356,10 @@ PyQt5==5.15.6
 PyQt5-sip==12.12.2
 pyqtgraph==0.12.4
 pyramid==2.0
+PyRect==0.2.0
 pyrsistent==0.18.1
+pyscreenshot==3.1
+PyScreeze==0.1.29
 pyserial==3.5
 pyShodan==0.2.6
 pyshp==2.3.1
@@ -338,8 +380,14 @@ python-pam==2.0.2
 python-pptx==0.6.18
 python-snappy==0.5.3
 python-socketio==5.7.2
+python-xlib==0.33
+python3-openid==3.2.0
+python3-xlib==0.15
 pythran==0.11.0
 PyTrie==0.4.0
+pyttsx3==2.90
+pytube==15.0.0
+pytweening==1.0.7
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 pytzdata==2020.1
@@ -351,10 +399,12 @@ qrcode==7.4.2
 Quamash==0.6.1
 reactivex==0.0.0
 redis==3.5.3
+regex==2023.8.8
 repoze.lru==0.7
 requests==2.31.0
 requests-file==1.5.1
 requests-ntlm==1.1.0
+requests-oauthlib==1.3.1
 requests-toolbelt==1.0.0
 responses==0.18.0
 retrying==1.3.3
@@ -362,9 +412,11 @@ rfc3986==1.5.0
 rich==13.3.1
 Routes==2.5.1
 rq==1.15.0
+rsa==4.9
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
 rule-engine==3.5.0
+Rx==3.2.0
 scapy==2.5.0
 scipy==1.10.1
 secure==0.3.0
@@ -375,15 +427,19 @@ sgmllib3k==1.0.0
 shodan==1.28.0
 simplejson==3.19.1
 simplekv==0.14.1
+singledispatch==4.1.0
 six==1.16.0
 slowapi==0.1.4
 smbmap==1.9.1
 smmap==5.0.0
 smoke-zephyr==2.0.1
 sniffio==1.2.0
+social-auth-app-django==5.3.0
+social-auth-core==4.4.2
 sortedcontainers==2.4.0
 soupsieve==2.4.1
 speaklater==1.4
+spicy==0.16.0
 spyse-python==2.2.3
 SQLAlchemy==1.4.47
 sqlalchemy-schemadisplay==1.3
@@ -399,6 +455,11 @@ tables==3.7.0
 tabulate==0.8.9
 Tempita==0.5.2
 tempora==5.3.0
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+tensorflow-cpu==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-io-gcs-filesystem==0.33.0
 termcolor==1.1.0
 terminaltables==3.1.10
 text-unidecode==1.3
@@ -449,6 +510,8 @@ wfuzz==3.1.0
 whois==0.8
 wifite==2.7.0
 winacl==0.1.7
+WMI==1.4.9
+wrapt==1.15.0
 wsaccel==0.6.3
 wsproto==1.2.0
 WTForms==3.0.1
